--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
                 android:resource="@xml/device_filter" />
         </activity>
     <service
-            android:name=".service.TpmsService"
+            android:name=".service.DashService"
             android:enabled="true"
             android:exported="false"
             android:foregroundServiceType="connectedDevice" />
